--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -12,10 +12,10 @@
   <script src="lib/jasmine-3.4.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/api.js"></script>
+  <script src="src/GateWay.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/apiSpec.js"></script>
+  <script src="spec/GateWaySpec.js"></script>
 
 </head>
 
